Multiple issues fixed:
1. fixed Add delete button #6
2. fixed 2 bugs, listed here! #8
3. fixed Songs title needs to be truncated #9
4. fixed Songs are getting uploaded twice #10

--- a/styles/Songs.module.scss
+++ b/styles/Songs.module.scss
@@ -68,6 +68,7 @@
         cursor: pointer;
 
         div {
+            flex-grow: 1;
             display: flex;
             justify-content: flex-start;
             align-items: center;
@@ -82,13 +83,21 @@
             }
 
             .song-title {
+                display: inline-block;
                 font-weight: 600;
                 width: 100%;
+                // white-space: nowrap;
+                // overflow: hidden;
+                // text-overflow: ellipsis;
             }
         }
 
         .song-artist {
             display: inline-block;
+            margin: 0 15px 0 0;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         @media screen and (max-width: 425px) {
